task#100 fix display text of the comment is too long

--- a/src/styles/CommentItem.css
+++ b/src/styles/CommentItem.css
@@ -30,3 +30,9 @@
 .CommentItem__delete-button:hover {
   color: #333;
 }
+.comment-content { 
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
